# C-Scalable-Modules

./: .cproject  .gitignore  .project  README  README.md  build.sh
c-lib/: CMakeLists.txt
c-lib/src/module-a/: CMakeLists.txt  module-a.c  module-a.h
c-lib/src/module-a/module-a.0.0.0/: CMakeLists.txt  module-a.0.0.0.c  module-a.0.0.0.h
c-lib/src/module-a/module-a.0.0.1/: CMakeLists.txt  module-a.0.0.1.c  module-a.0.0.1.h
c-lib/src/module_a/: CMakeLists.txt  module_a.c  module_a.h  module_a_data_structures.h
c-lib/src/module_a/module_a_0_0_0/: CMakeLists.txt  module_a_0_0_0.c  module_a_0_0_0.h
c-lib/src/module_a/module_a_0_0_1/: CMakeLists.txt  module_a_0_0_1.c  module_a_0_0_1.h
c-server/: CMakeFunctions.txt  CMakeLists.txt
c-server/include/module_a/: module_a_data_structures.h
c-server/include/module_a/module_a_0_0_0/: module_a_0_0_0.h
c-server/include/module_a/module_a_0_0_1/: module_a_0_0_1.h
c-server/src/: main.c
c-wasm/src/module_canvas/: CMakeLists.txt  module_canvas.c  module_canvas.h  module_canvas_data_structures.h
c-wasm/src/module_canvas/module_canvas_0_0_0/: CMakeLists.txt  module_canvas_0_0_0.c  module_canvas_0_0_0.h
c-wasm/src/module_canvas/module_canvas_0_0_1/: CMakeLists.txt  module_canvas_0_0_1.c  module_canvas_0_0_1.h
