cmake_minimum_required(VERSION 3.25)
project(c-lib-module-a)
set(CMAKE_STATIC_LIBRARY_PREFIX "")

set(CMAKE_C_STANDARD 17)
set(CMAKE_BUILD_TYPE DEBUG)

set(SOURCE_DIRECTORY ".")
file(GLOB SOURCE_FILE_LIST "${SOURCE_DIRECTORY}/*.c")
foreach(SOURCE_FILE IN LISTS SOURCE_FILE_LIST)
	message(${SOURCE_FILE})
endforeach()
#file(GLOB_RECURSE SOURCE_FILE_LIST "${SOURCE_DIRECTORY}/*.c")
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILE_LIST})

set_target_properties("${PROJECT_NAME}" PROPERTIES LINKER_LANGUAGE C)
install(TARGETS ${PROJECT_NAME} DESTINATION lib)

